Fix button not sticky, and overlapping

--- a/source/wp-content/themes/wporg-developer/scss/prism.scss
+++ b/source/wp-content/themes/wporg-developer/scss/prism.scss
@@ -213,11 +213,14 @@ pre.wp-block-code {
 	position: relative;
 
 	> .wp-code-block-button-container {
-		display: none;
-		position: absolute;
-		top: 1rem;
-		right: 1rem;
+		display: flex;
+		justify-content: right;
 		z-index: 2;
+		position: sticky;
+		left: 0;
+		top: 0;
+		visibility: hidden;
+		margin-bottom: 1rem;
 
 		button {
 			font-size: 1.4rem;
@@ -230,6 +233,6 @@ pre.wp-block-code {
 
 	&:hover > .wp-code-block-button-container,
 	&:focus-within > .wp-code-block-button-container {
-		display: revert;
+		visibility: visible;
 	}
 }
